--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,22 +1,23 @@
 // Change the following attributes.
 :quickstart-project-name: quickstart-amazon-marketing-cloud
-:partner-product-name: Amazon Marketing Cloud
+:partner-product-name: Amazon Marketing Cloud Analytics Delivery Kit
 // For the following attribute, if you have no short name, enter the same name as partner-product-name.
-:partner-product-short-name: AMC
+:partner-product-short-name: AMC Analytics Delivery Kit
 // If there's no partner, comment partner-company-name.
-:partner-company-name: Amazon Marketing
+:partner-company-name: Ad Tech Solutions - Amazon Ads
 :doc-month: October
 :doc-year: 2021
 // Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
-//:partner-contributors: Shuai Ye, Michael McConnell, and John Smith, {partner-company-name}
-//:other-contributors: Akua Mansa, Trek10
+:partner-contributors: Arpan Shah, Naomi Joshi and Chaitra Nayak, Ad Tech Solutions - Amazon Ads
 :aws-contributors: Chip Reno, AWS WW AD & Mktg Sols GTMS
 :quickstart-contributors: Troy Ameigh, AWS Integration & Automation team
+:other-contributors: Brian Maguire and Ramesh Jetty, Solution Architecture - Advertising and Marketing Technology
+
 // For deployment_time, use minutes if deployment takes an hour or less,
 // for example, 30 minutes or 60 minutes.
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
 // for example, 1.25 hours, 2 hours, 2.5 hours.
-:deployment_time: 15 minutes / 60 minutes / 1.5 hours
+:deployment_time: 1.5 hours
 :default_deployment_region: us-east-1
 :parameters_as_appendix:
 // Uncomment the following attribute only if your Quick Start requires custom info (e.g., the product is limited to a specific Region and that will not change). When this attribute is uncommented, any content in the partner-editable/regions.adoc file appears in the "Supported AWS Regions" section of the generated guide instead of the boilerplate info in regions_default.adoc.
