--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -2,7 +2,4 @@
 // Identify your target audience and explain how/why they would use this Quick Start.
 //Avoid borrowing text from third-party websites (copying text from AWS service documentation is fine). Also, avoid marketing-speak, focusing instead on the technical aspect.
 
-This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture on the AWS Cloud.
-
-This Quick Start helps advertising customers to start working the Amazon Marketing Cloud (AMC) and to enable more self-service analytics and execute custom, value-driven use cases for measuring their media campaigns with Amazon.
-It also provides the foundation necessary with AWS technologies to enable more self-service analytics for AMC customers.
+This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture on the AWS Cloud. It provision infrastructure for Amazon Marketing Cloud (AMC) users to build custom use cases to evaluate their Amazon media campaigns.
