Minor formatting edits

--- a/docs/partner_editable/faq_troubleshooting.adoc
+++ b/docs/partner_editable/faq_troubleshooting.adoc
@@ -1,17 +1,13 @@
-// Add any tips or answers to anticipated questions.
-
 == FAQ
 
 *Q.* I encountered a *CREATE_FAILED* error when I launched the Quick Start.
 
-*A.* If AWS CloudFormation fails to create the stack, relaunch the template with *Rollback on failure* set to *Disabled*. This setting is under *Advanced* in the AWS CloudFormation console on the *Configure stack options* page. With this setting, the stack’s state is retained, and the instance keeps running so that you can troubleshoot the issue. (For Windows, look at the log files in `%ProgramFiles%\Amazon\EC2ConfigService` and `C:\cfn\log`.)
-// Customize this answer if needed. For example, if you’re deploying on Linux instances, either provide the location for log files on Linux or omit the final sentence. If the Quick Start has no EC2 instances, revise accordingly (something like "and the assets keep running").
+*A.* If AWS CloudFormation fails to create the stack, relaunch the template with *Rollback on failure* set to *Disabled*. This setting is under *Advanced* in the AWS CloudFormation console on the *Configure stack options* page. With this setting, the stack’s state is retained, and the instance remains running so that you can troubleshoot the issue. (For Windows, look at the log files in `%ProgramFiles%\Amazon\EC2ConfigService` and `C:\cfn\log`.)
 
-WARNING: When you set *Rollback on failure* to *Disabled*, you continue to incur AWS charges for this stack. Delete the stack when you finish troubleshooting.
+WARNING: When you set *Rollback on failure* to *Disabled*, you continue to incur AWS charges for the stack. Delete the stack when you finish troubleshooting.
 
 For more information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/troubleshooting.html[Troubleshooting AWS CloudFormation^].
 
-//Use these three apostrophes above each new question to create a dividing line. This helps people skim for the questions relevant to them, especially as the number and length of Qs & As increases.
 '''
 *Q.* I encountered a size-limitation error when I deployed the AWS CloudFormation templates.
 
@@ -19,9 +15,9 @@ For more information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/U
 
 '''
 
-*Q.* I encountered multiple AWS CodeBuild failiures.
+*Q.* I encountered multiple AWS CodeBuild failures.
 
-*A.* As part of this Quick Start deployment, four AWS CodeBuilds are concurrently invoked. For a brand new AWS account, you might see a scenario where multiple AWS CodeBuilds are in queued status and eventually failing. Please reach out to AWS support to increase the concurrent AWS CodeBuild run service limits
+*A.* This Quick Start invokes four AWS CodeBuilds concurrently. For a new AWS account, you may have a scenario where multiple AWS CodeBuilds are queued and failing. To increase the concurrent AWS CodeBuild service limits, contact https://aws.amazon.com/contact-us/[AWS support^].
 
 
 //== Troubleshooting
