--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -4,11 +4,11 @@
 // For the following attribute, if you have no short name, enter the same name as partner-product-name.
 :partner-product-short-name: AMC Analytics Delivery Kit
 // If there's no partner, comment partner-company-name.
-:partner-company-name: Ad Tech Solutions - Amazon Ads
+:partner-company-name: Ad Tech Solutions
 :doc-month: November
 :doc-year: 2021
 // Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
-:partner-contributors: Arpan Shah, Naomi Joshi and Chaitra Nayak, Ad Tech Solutions - Amazon Ads
+:partner-contributors: Arpan Shah, Naomi Joshi, and Chaitra Nayak, Ad Tech Solutions
 :aws-contributors: Chip Reno, AWS WW AD & Mktg Sols GTMS
 :quickstart-contributors: Troy Ameigh, AWS Integration & Automation team
 :other-contributors: Brian Maguire and Ramesh Jetty, Solution Architecture - Advertising and Marketing Technology
