--- a/docs/partner_editable/deployment_options.adoc
+++ b/docs/partner_editable/deployment_options.adoc
@@ -2,7 +2,7 @@
 
 This Quick Start provides the following deployment option:
 
-* *Deploy {partner-product-short-name} into a new or existing AWS Account *. This option configures a new or existing AWS environment with various serivces described above.
+* *Deploy {partner-product-short-name} into a new or existing AWS Account *. This option configures a new or existing AWS environment.
 //* *Deploy {partner-product-short-name} into an existing VPC*. This option provisions {partner-product-short-name} in your existing AWS infrastructure.
 
 //The Quick Start provides separate templates for these options. It also lets you configure Classless Inter-Domain Routing (CIDR) blocks, instance types, and {partner-product-short-name} settings, as discussed later in this guide.
